# PyGuitarPro

./: .editorconfig  .gitignore  .hgflow  .hgignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml  tests.yml
docs/: Makefile  api.rst  base.rst  conf.py  gp3.rst  gp4.rst  gp5.rst  index.rst  make.bat  requirements.txt  spec35.rst  types.rst
docs/pyguitarpro/: api.rst  format.rst  install.rst  quickstart.rst
examples/: dfh.py  filter_5_string_bass_tabs.py  filter_trio_tabs.py  transpose.py
guitarpro/: __init__.py  base.py  gp3.py  gp4.py  gp5.py  gpx.py  io.py  iobase.py  models.py  utils.py
playground/: 1 beat.tmp  2 beats with lyrics.tmp  2 beats.tmp  2 whole bars.tmp  4 beats with score info.tmp  4 beats within bar.tmp
src/guitarpro/: __init__.py  gp3.py  gp4.py  gp5.py  iobase.py
tests/: 001_Funky_Guy.gp5  CarpeDiem - Dumbass Knocking His Head on the Wall.gp3  CarpeDiem - I Ching.gp3  CarpeDiem - Ink.gp4  Chords.gp3  Chords.gp4  Chords.gp5  Deep Purple - Love Child.gp5  Demo v5.gp5  Directions.gp5  Duration.gp3  Effects.gp3  Effects.gp4  Effects.gp5  Ephemera - Dust for Tears.gp3  Ephemera - Dust for Tears.gp5  Harmonics.gp3  Harmonics.gp4  Harmonics.gp5  Key.gp4  Key.gp5  Mastodon - Curl of the Burl.gp5  Mastodon - Ghost of Karelia.gp5  Measure Header.gp3  Measure Header.gp4  Measure Header.gp5  No Wah.gp5  Queens of the Stone Age - I Appear Missing.gpx  Queens of the Stone Age - My God Is the Sun.gpx  RSE.gp5  Repeat.gp4  Repeat.gp5  Slides.gp4  Slides.gp5  Strokes.gp4  Strokes.gp5  Tie.gp5  Unknown Chord Extension.gp5  Unknown-m.gp5  Unknown.gp5  (+10 more)
