[project]
name = "PyGuitarPro"
version = "0.10"
description = "Read, write, and manipulate GP3, GP4 and GP5 files."
readme = "README.rst"
license = {text = "LGPL-3.0-only"}
authors = [{name = "Sviatoslav Abakumov", email = "dust.harvesting@gmail.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Artistic Software",
    "Topic :: Multimedia :: Sound/Audio",
]
requires-python = ">=3.9"
dependencies = [
    "attrs>=19.2",
]

[project.urls]
Documentation = "https://pyguitarpro.readthedocs.io/"
"Source code" = "https://github.com/Perlence/PyGuitarPro"
"Issue tracker" = "https://github.com/Perlence/PyGuitarPro/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["guitarpro"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    {include-group = "docs"}
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.0.2",
]
