[metadata]
name = PyGuitarPro
url = https://github.com/Perlence/PyGuitarPro
project_urls =
    Documentation = https://pyguitarpro.readthedocs.io/
    Code = https://github.com/Perlence/PyGuitarPro
    Issue tracker = https://github.com/Perlence/PyGuitarPro/issues
license = LGPL-3.0-only
author = Sviatoslav Abakumov
author_email = dust.harvesting@gmail.com
description = Read, write, and manipulate GP3, GP4 and GP5 files.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Artistic Software
    Topic :: Multimedia :: Sound/Audio

[options]
packages = guitarpro
include_package_data = true
python_requires = >=3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[tool:pytest]
testpaths = tests

[bdist_wheel]
universal = 1
